--- a/src/Components/Nav/nav.scss
+++ b/src/Components/Nav/nav.scss
@@ -20,3 +20,8 @@
     // padding: 0.6rem;
   }
 }
+.selected {
+  font-weight: bold;
+  color: #050505; /* Example selected color */
+  border-bottom: 2px solid #0d0d0d; /* Example indicator */
+}
