--- a/src/Components/Nav/nav.css
+++ b/src/Components/Nav/nav.css
@@ -1,31 +1,28 @@
 .logoBug {
   color: black;
   text-decoration: none;
-
-  // width: 1 rem;
 }
+
 .navBarContainer {
   display: flex;
   border-bottom: 0.1rem solid black;
-  // height: 20px;
   margin-top: 1rem;
   padding: 0.5rem 0.5rem 1rem 1rem;
 }
+
 .navBar {
   display: flex;
   justify-content: space-between;
   padding-left: 1rem;
   gap: 2rem;
-  &-Link1,
-  &-Link2 {
-    color: rgb(87, 85, 85);
-    text-decoration: none;
-
-    // padding: 0.6rem;
-  }
 }
+.navBar-Link1, .navBar-Link2 {
+  color: rgb(87, 85, 85);
+  text-decoration: none;
+}
+
 .selected {
   font-weight: bold;
   color: #050505; /* Example selected color */
   border-bottom: 2px solid #0d0d0d; /* Example indicator */
-}
+}/*# sourceMappingURL=nav.css.map */
