--- a/src/Components/Dashboard/dashboard.scss
+++ b/src/Components/Dashboard/dashboard.scss
@@ -83,6 +83,9 @@
 }
 .tags {
   margin-top: 0.5rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
 
   .tag {
     display: inline-block;
@@ -92,5 +95,27 @@
     padding: 3px 6px;
     border-radius: 3px;
     margin-right: 0.5rem;
+
+    &.active {
+      font-weight: 600;
+      background-color: #0052cc;
+      color: #ffffff;
+    }
+    &.bug {
+      background-color: #ffebe6;
+      color: #bf2600;
+    }
+    &.urgent {
+      background-color: #fff4e5;
+      color: #ff8b00;
+    }
+    &.feature {
+      background-color: #deebff;
+      color: #0747a6;
+    }
+    &:hover {
+      transform: scale(1.05);
+      filter: brightness(0.95);
+    }
   }
 }
