--- a/src/Components/Footer/footer.scss
+++ b/src/Components/Footer/footer.scss
@@ -1,4 +1,8 @@
 .app-footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
   margin-top: 3rem;
   padding: 1.25rem 2rem;
   background: #f4f5f7;
